build: bump the formatter that JDK 25 had broken, and rearm its gate
spotless 6.25.0 -> 7.0.2 and google-java-format 1.22.0 -> 1.28.0. The old
formatter called Log$DeferredDiagnosticHandler.getDiagnostics() expecting a
Queue where JDK 25 returns a List, so spotlessJava threw NoSuchMethodError on
the first file it touched. That is why 9cec235 had to set enforceCheck = false
to get `check` running again; this commit removes that switch, so spotlessCheck
gates the build once more.

Running the working formatter reprints 498 of the Java files. The disagreement
is house-wide and purely typographic: imports sort into one ASCII block, AOSP
indents continuations 8 spaces where this tree used 4, and long signatures go
one parameter per line. No logic moves -- google-java-format parses and
reprints the AST -- and the suite says the same thing before and after: 1023
tests, 0 failures, 0 skipped, integration tests included. removeUnusedImports()
deleted no import that a javadoc link still referenced.

Kept deliberately isolated, so `git blame` has exactly one commit to skip.